# lattice-bridge

./: CHANGELOG.md  Cargo.toml  README.md
src/: anchor.rs  error.rs  lexical.rs  lib.rs  main.rs  matcher.rs  output.rs  structural.rs  vocab.rs
tests/: integration.rs
tests/fixtures/: version_iri.owl
